<resources>
    <string name="app_name">Vasilev.303.lab01calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Name">Lab 01 Calculator</string>
    <string name="Name1">Vasilev,303</string>
    <string name="NameGr">Vasilev, 303</string>
    <string name="infoA">A:</string>
    <string name="infoB">B:</string>
    <string name="infoRes">Result:</string>
    <string name="infoAdd">Add</string>
    <string name="infoSub">Subtract</string>
    <string name="infoMult">Multiply</string>
    <string name="infoDiv">Divide</string>
    <string name="infoCos">Cos</string>
    <string name="infoSin">Sin</string>
    <string name="infoTan">Tan</string>
    <string name="infoSqrt">Sqrt</string>
    <string name="infoPow">Pow</string>
    <string name="infoPi">П</string>
    <string name="infopi">Pi</string>
</resources>